--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="images/image.png" alt="Medical Hearts" class="left-image">
+    <img src="image.png" alt="Medical illustration" style="width: 300px;">
     <div class="content">
       <h1>Welcome to Quick Diagnosis</h1>
       <p>Get fast and accurate health assessments at your fingertips.</p>
